# plsplay

./: Cargo.toml  Makefile  README.md  install.ps1  install.sh
src/: ansi.rs  asni.rs  audio_control.rs  get.rs  main.rs  run.rs  select.rs
src/metadata/: handle.rs  mod.rs  parse.rs
