[package]
name = "plsplay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = {version = "0.20.0",default-features = false,features = ["pancurses-backend"]}
rodio = {version = "0.16.0"}
structopt = "0.3.26"
redlux ={ git = "https://github.com/El-Wumbus/redlux"}
lofty = "*"
souvlaki = "*"
human-repr = "1.0.1"

serde = {version = "1.0", features = ["derive"] }
tui = { version = "0.19", default-features = false, features = ['crossterm', 'serde'] } # TUI?
crossterm = { version = "0.25", features = [ "serde" ] }
